bril-frontend/tests/snapshots/infer_types__import_bril_checks.snap
---
source: bril-frontend/tests/infer_types.rs
expression: "format! (\"PROGRAM\\n--------\\n{}\\n\\nTYPES\\n-------\\n{}\", code, snapshot)"
---
PROGRAM
--------
from "foo" import @bar, @baz as @bop;
from "foo" import @bar, @baz;


TYPES
-------
