bril-frontend/tests/snapshots/infer_types__simple_bril_checks.snap
---
source: bril-frontend/tests/infer_types.rs
expression: "format! (\"PROGRAM\\n--------\\n{}\\n\\nTYPES\\n-------\\n{}\", code, snapshot)"
---
PROGRAM
--------
@main() {
.test:
  a: int = const 0;
}


TYPES
-------
FUNCTION @main
  a: int
